fix copy, section hero image, layout on mobile view, links for buttons

--- a/source/sass/1-tools/_grids.sass
+++ b/source/sass/1-tools/_grids.sass
@@ -3,6 +3,8 @@
 @import '_vars'
 @import '_functions'
 
+//TODO 769px - 960px
+
 //TODO Add media query for layout xxl-screen lost-colu
 
 //* ************ G R I D ************
@@ -90,7 +92,7 @@
     //lost-align: center
     //lost-center: flex
 
-    @media screen and (max-width: $m-screen)
+    @media screen and (max-width: $l-screen)
       lost-column: 1/1
       padding: 0px
 
