--- a/source/sass/2-basics/_example-buttons.sass
+++ b/source/sass/2-basics/_example-buttons.sass
@@ -32,7 +32,7 @@ input[type="button"]
     border-color: $complimentary2
     background-color: $complimentary2
     outline: 0
-  @media screen and (max-width: $m-screen)
+  @media screen and (max-width: $l-screen)
     margin-bottom: 15px
 
 .button-primary,
