--- a/source/sass/2-basics/_separators.sass
+++ b/source/sass/2-basics/_separators.sass
@@ -31,7 +31,7 @@ hr
   //separator for mobile hidden by default
   &.mobile
     display: none
-    @media screen and (min-width: $xxs-screen) and (max-width: $m-screen)
+    @media screen and (min-width: $xxs-screen) and (max-width: $l-screen)
       display: block
     @media screen and (min-width: 961px)
 // revealed when < 768px
