--- a/source/sass/4-pages/_homepage.sass
+++ b/source/sass/4-pages/_homepage.sass
@@ -27,3 +27,17 @@ div.hero-image
 //    padding-top: 10px
 //  &:nth-child(even)
 //    padding-bottom: 10px
+
+
+.hero-image
+  p.leading-section
+    color: $white
+    //background-color: rgba(255, 255, 255, 0.3)
+    background-color: rgba($complimentary1, 0.2)
+
+    box-shadow: 1px 1px 1px rgba(0,0,0,0.1)
+    @media screen and (max-width: $m-screen)
+      background-color: rgba($complimentary2, 0.4)
+      box-shadow: 2px 2px 2px rgba(0,0,0,0.2)
+    > i
+      color: $primary-mono4
