--- a/source/sass/main.sass
+++ b/source/sass/main.sass
@@ -133,5 +133,7 @@ $color-listing: zip($color-mono-list, $color-mono-name)
 //    display: block
 
 
-h1
-  color: black
+//h1
+//  color: black
+
+
